# tinytp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
cmake/: GoogleTest.cmake
include/tinytp/: cli.h  collect.h  db.h  git.h  model.h  prio.h  report-parser.h  runner.h  util.h
test/: CMakeLists.txt  test_cli.cpp  test_collect.cpp  test_db.cpp  test_git.cpp  test_prio.cpp  test_report_parser.cpp  test_rtp.cpp  test_util.cpp
tinytp/: CMakeLists.txt  cli.cpp  collect.cpp  db.cpp  git.cpp  main.cpp  model.cpp  prio.cpp  report-parser.cpp  util.cpp
